令和元年1回目の結果を記録

--- a/html/r1_result.html
+++ b/html/r1_result.html
@@ -56,7 +56,7 @@
                 <tbody>
                     <tr>
                         <th class="p-1">問1</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="terms.html#h_IPSec">IPSec</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -74,7 +74,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問2</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -92,7 +92,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問3</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -110,7 +110,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問4</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -128,7 +128,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問5</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -146,7 +146,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問6</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -164,7 +164,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問7</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -182,7 +182,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問8</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="terms.html#h_NSレコード">NSレコード</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -200,7 +200,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問9</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -218,7 +218,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問10</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -236,7 +236,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問11</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -254,7 +254,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問12</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -272,7 +272,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問13</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -290,7 +290,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問14</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -308,7 +308,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問15</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -326,7 +326,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問16</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -344,7 +344,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問17</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -362,7 +362,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問18</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -380,7 +380,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問19</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -398,7 +398,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問20</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -416,7 +416,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問21</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -434,7 +434,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問22</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -452,7 +452,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問23</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -470,7 +470,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問24</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -488,7 +488,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問25</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -506,7 +506,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">正解率</th>
-                        <td class="p-1">-</td>
+                        <td class="p-1">80%</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
