--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_IPSec">IPSec</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -78,7 +78,7 @@
                         <td class="p-1"><a href="html/terms.html#h_OFDM">OFDM</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -96,7 +96,7 @@
                         <td class="p-1"><a href="html/terms.html#h_OSPF">OSPF</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -114,7 +114,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -132,7 +132,7 @@
                         <td class="p-1"><a href="html/terms.html#h_MTU">MTU</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -150,7 +150,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -168,7 +168,7 @@
                         <td class="p-1"><a href="html/terms.html#h_BGP">BGP</a></td>
                         <td class="p-1"><a href="html/terms.html#h_IGMP">IGMP</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -186,7 +186,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_NSレコード">NSレコード</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -204,7 +204,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_DNSラウンドロビン">DNSラウンド<br>ロビン</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -222,7 +222,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -240,7 +240,7 @@
                         <td class="p-1"><a href="html/terms.html#h_VLANタグ">VLANタグ</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_MPLS">MPLS</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -258,7 +258,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_MQTT">MQTT</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -276,7 +276,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -294,7 +294,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_RMON">RMON</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -312,7 +312,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -330,7 +330,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -348,7 +348,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -366,7 +366,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -384,7 +384,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -402,7 +402,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -420,7 +420,7 @@
                         <td class="p-1"><a href="html/terms.html#h_IEEE802.1X">IEEE802.1X</a></td>
                         <td class="p-1"><a href="html/terms.html#h_DNSリフレクタ攻撃">DNSリフレクタ<br>攻撃</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -438,7 +438,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_量子アニーリング方式">量子アニーリング<br>方式</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -456,7 +456,7 @@
                         <td class="p-1"><a href="html/terms.html#h_FaaS">FaaS</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_待ち行列モデル">待ち行列<br>モデル</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -474,7 +474,7 @@
                         <td class="p-1"><a href="html/terms.html#h_SysML">SysML</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -492,7 +492,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -510,7 +510,7 @@
                         <td class="p-1">64%</td>
                         <td class="p-1">80%</td>
                         <td class="p-1">76%</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">80%</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
