平成30年1回目の結果を記録

--- a/html/terms.html
+++ b/html/terms.html
@@ -449,6 +449,18 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item" id="h_NICチーミング">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#NICチーミング" aria-expanded="false" aria-controls="NICチーミング">
+                        NICチーミング
+                    </button>
+                </h2>
+                <div id="NICチーミング" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        コンピュータ(主にサーバ)に搭載されている複数のNICに同じIPアドレスを割り当てることで論理的に1つのNICとして扱う技術。
+                    </div>
+                </div>
+            </div>
             <div class="accordion-item" id="h_NSレコード">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#NSレコード" aria-expanded="false" aria-controls="NSレコード">
@@ -472,6 +484,19 @@
                     <div class="accordion-body">
                         無線LANの規格IEEEsa802.11a/g/n/acで採用されている変調方式。各搬送波の中心を隣の搬送波の谷間に重なるように配置することで、さらに多数の搬送波を同時に送信できるようにしたもの。<br>
                         データ信号を複数のサブキャリアに分割し、各サブキャリアが互いに干渉しないように配置する。
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item" id="h_OpenFlow">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#OpenFlow" aria-expanded="false" aria-controls="OpenFlow">
+                        OpenFlow
+                    </button>
+                </h2>
+                <div id="OpenFlow" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        データ転送と経路制御の機能を論理的に分離し、コントローラが複数のネットワーク機器のデータ転送を集中的に制御・管理するプロトコル。アプリケーションはノースバウンドインターフェースを介してコントロータに
+                        指示を出す。ネットワーク機器がコントローラに提供するAPIはサウスバウンドインターフェースと呼ばれる。
                     </div>
                 </div>
             </div>
@@ -661,6 +686,20 @@
                     <div class="accordion-body">
                         IEEE802.1Qヘッダー情報を格納する4バイトのフィールドでタグつきフレームであることを示す識別子、VLAN ID、優先度などの情報を含む。VLANタグはイーサネットフレーム中の送信元MACアドレスとタイプ/長さフィールドの間に
                         挿入される。
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item" id="h_WebSocket">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#WebSocket" aria-expanded="false" aria-controls="WebSocket">
+                        WebSocket
+                    </button>
+                </h2>
+                <div id="WebSocket" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        Webアプリケーションにおいて、クライアント(Webブラウザ)とWebサーバの間で効率的な双方向通信を実現するプロトコル。通信路確立後はHTTPの手順に縛られず1つのTCPコネクション上でデータのやりとりが可能で、
+                        サーバからクライアントへのデータのプッシュが可能となる。URIのスキームにはws(平文通信)またはwss(暗号通信)の2つがあり、デフォルトのポートはwsが80、wssが443とhttp、httpsに準じているが任意のポートを
+                        指定できる。WebSocketはクライアント側がハンドシェイク要求をサーバに送信することで開始され、サーバ側からWebSocketの接続開始を要求することはできない。
                     </div>
                 </div>
             </div>
