--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_IPSec">IPSec</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -79,7 +79,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -97,7 +97,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -115,7 +115,7 @@
                         <td class="p-1"><a href="html/terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
                         <td class="p-1">×</td>
                         <td class="p-1"><a href="html/terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -133,7 +133,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -151,7 +151,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -169,7 +169,7 @@
                         <td class="p-1"><a href="html/terms.html#h_IGMP">IGMP</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -187,7 +187,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_NSレコード">NSレコード</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -205,7 +205,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_DNSラウンドロビン">DNSラウンド<br>ロビン</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -223,7 +223,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -241,7 +241,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_MPLS">MPLS</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -259,7 +259,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_MQTT">MQTT</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -277,7 +277,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -295,7 +295,7 @@
                         <td class="p-1"><a href="html/terms.html#h_RMON">RMON</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -313,7 +313,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_WebSocket">WebSocket</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -331,7 +331,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -349,7 +349,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -367,7 +367,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -385,7 +385,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -403,7 +403,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -421,7 +421,7 @@
                         <td class="p-1"><a href="html/terms.html#h_DNSリフレクタ攻撃">DNSリフレクタ<br>攻撃</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -439,7 +439,7 @@
                         <td class="p-1"><a href="html/terms.html#h_量子アニーリング方式">量子アニーリング<br>方式</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_NICチーミング">NICチーミング</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -457,7 +457,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_待ち行列モデル">待ち行列<br>モデル</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -475,7 +475,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -493,7 +493,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -511,7 +511,7 @@
                         <td class="p-1">80%</td>
                         <td class="p-1">76%</td>
                         <td class="p-1">80%</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">92%</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
